--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.data.mongodb.uri=mongodb+srv://sssjava:yl123@singaporesportsschool.rajx3ts.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=AttractionManagementSystem
+spring.data.mongodb.auto-index-creation=true
 
 server.port=8080
 spring.application.name=SSSAttractionManagement
