--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/vue": "^5.11.2",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
+    "chart.js": "^3.9.1",
     "chartist": "^1.1.2",
     "core-js": "^3.8.3",
     "mutationobserver-shim": "^0.3.7",
@@ -23,6 +24,7 @@
     "portal-vue": "^2.1.7",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^2.8.1"
   },
   "devDependencies": {
