--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 		<java.version>17</java.version>
 		<node.version>v16.15.1</node.version>
 		<npm.version>8.19.1</npm.version>
+		<spring.version>5.2.0.RELEASE</spring.version>
+		<email.version>1.16.18</email.version>
 	</properties>
 	<dependencies>
 
@@ -91,7 +93,30 @@
 		    <artifactId>opencsv</artifactId>
 		    <version>4.5</version>
 		</dependency>	
-		
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
+		  </dependency>
+		   
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+                <artifactId>javax.mail</artifactId>
+                <version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		 </dependency>
 	</dependencies>
 
 	<build>
