--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,19 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=yeoshitan@gmail.com
+spring.mail.password=PW
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+attachment.invoice=path_to_file
+spring.mail.templates.path=mail-templates
+
 # App Properties
 #ams.app.jwtSecret= bezKoderSecretKey
 #ams.app.jwtExpirationMs= 86400000
