--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,18 +17,18 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.office365.com
 spring.mail.port=587
-spring.mail.username=yeoshitan@gmail.com
-spring.mail.password=PW
+spring.mail.username=oopg2t4@outlook.com
+spring.mail.password=g2t4OOP!
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
+spring.mail.templates.path=templates
 attachment.invoice=path_to_file
-spring.mail.templates.path=mail-templates
 
 # App Properties
 #ams.app.jwtSecret= bezKoderSecretKey
