--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/vue": "^5.11.2",
+    "@vue/cli": "^5.0.8",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "chart.js": "^3.9.1",
