--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -17,6 +17,7 @@
     "@vue/cli": "^5.0.8",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
+    "bootstrap-vue-editable-table": "^0.1.4",
     "chart.js": "^3.9.1",
     "chartist": "^1.1.2",
     "core-js": "^3.8.3",
