--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,8 @@ attachment.invoice=path_to_file
 
 spring.task.scheduling.pool.size=10
 
+server.error.whitelabel.enabled=false
+
 # App Properties
 #ams.app.jwtSecret= bezKoderSecretKey
 #ams.app.jwtExpirationMs= 86400000
