--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,13 +22,16 @@
     "chart.js": "^3.9.1",
     "chartist": "^1.1.2",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-chartjs": "^4.1.2",
-    "vue-router": "^2.8.1"
+    "vue-router": "^2.8.1",
+    "vue-simple-alert": "^1.1.1",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
