--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -21,7 +21,8 @@
     "bootstrap-vue-editable-table": "^0.1.4",
     "chart.js": "^3.9.1",
     "chartist": "^1.1.2",
-    "core-js": "^3.8.3",
+    "core-js": "^3.26.1",
+    "cors": "^2.8.5",
     "moment": "^2.29.4",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
