--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -32,7 +32,8 @@
     "vue-chartjs": "^4.1.2",
     "vue-router": "^2.8.1",
     "vue-simple-alert": "^1.1.1",
-    "vuelidate": "^0.7.7"
+    "vuelidate": "^0.7.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
